plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'application'
}

group = 'ru.nsu.dunaev'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

javafx {
    version = '21'  // Обновляем до JavaFX 21
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)  // Используем Java 21
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['--add-modules', 'javafx.controls,javafx.fxml'])
}

application {
    mainClassName = 'ru.nsu.dunaev.Main'
}

sourceSets {
    main {
        java.srcDirs = ['src/main/java']
        resources.srcDirs = ['src/main/resources']
    }
    test {
        java.srcDirs = ['src/test/java']
        resources.srcDirs = ['src/test/resources']
    }
}

tasks.named('run') {
    standardInput = System.in
}

tasks.named('test') {
    useJUnitPlatform()
}